[package]
name = "hide"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = true
panic = "abort"

[dependencies]
assert_cmd = "2.0.17"
atty = "0.2.14"
clap = { version = "4.5.45", features = ["derive"] }
cli-clipboard = "0.4.0"
env_logger = "0.11.8"
log = "0.4.27"
predicates = "3.1.3"
tempfile = "3.21.0"
